done: Create Stats section using Card elements, Add searchbar icon in header; todo: Fix styling in cards after wrapping them in stats div, add arrows for filters, Create separate component to hold Stats area

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,6 +42,14 @@ a {
   float: left;
 }
 
+.sicon{
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 26px;
+  right: 165px;
+}
+
 .menu{
   float: right;
   padding-top: 20px;
@@ -65,7 +73,8 @@ a {
 .search-bar input{
   height: 33px;
   width: 172px;
-  border-radius: 2em;
+  border-radius: 10px;
+  background-color: #F2F2F2;
 }
 
 .card{
@@ -83,8 +92,30 @@ a {
   padding-bottom: 0;
 }
 
-.stats-area{
+.card-stats-area{
   display: flex;
+}
+
+.stats{
+  width: 300px;
+}
+
+.filter{
+  display: inline-block;
+  width: 250px;
+}
+
+.stats-filter{
+  display: inline-block;
+  color: #E84393;
+  margin: 0;
+}
+
+.see-more{
+  display: inline-block;
+  float: right;
+  color: #ACACAC;
+  margin: 0;
 }
 
 .green-arrow-up {
@@ -120,7 +151,7 @@ a {
 .case-numbers{
   float: right;
   position: relative;
-  margin-top: 5px;
+  margin-top: -30px;
   padding-left: 120px;
   padding-bottom: 10px;
 }
